responsible visibility fix

--- a/scss/partials/components/_visibility.scss
+++ b/scss/partials/components/_visibility.scss
@@ -18,7 +18,7 @@
   }
 
   [class*="visible-"] {
-    display: none;
+    display: none !important;
 
     @each $bp in map-keys($breakpoints) {
       &.visible-#{$bp}-up-block {
